Fix flickering tooltip on assignee selector (fixes #1950)

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -149,6 +149,8 @@
 
   // loading indicator for the group needs extra fixing up.
   .assignee-selector {
+    display: inline-block;
+
     .loading {
       margin: 0;
 
